--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </header>
     
     <h1>Demo Git</h1>   
-
+    <section>
+        ligne rajoutée par dev1
+    </section>
 
 </body>
 </html>
